--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1291,9 +1291,17 @@ nav .nav-link.active::after{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
+.odd\:bg-slate-100:nth-child(odd){
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+}
 .even\:bg-slate-100:nth-child(even){
   --tw-bg-opacity: 1;
   background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+}
+.even\:bg-white:nth-child(even){
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 .focus-within\:border-slate-600:focus-within{
   --tw-border-opacity: 1;
