--- a/public/css/app.css
+++ b/public/css/app.css
@@ -461,6 +461,18 @@ Ensure the default browser behavior of the `hidden` attribute.
     max-width: 1536px;
   }
 }
+.absolute{
+  position: absolute;
+}
+.relative{
+  position: relative;
+}
+.top-0{
+  top: 0px;
+}
+.left-0{
+  left: 0px;
+}
 .m-auto{
   margin: auto;
 }
@@ -506,17 +518,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 .ml-1{
   margin-left: 0.25rem;
 }
-.mb-5{
-  margin-bottom: 1.25rem;
-}
-.mr-5{
-  margin-right: 1.25rem;
+.mt-12{
+  margin-top: 3rem;
 }
 .mt-5{
   margin-top: 1.25rem;
-}
-.mt-12{
-  margin-top: 3rem;
 }
 .mb-0{
   margin-bottom: 0px;
@@ -542,6 +548,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .h-7{
   height: 1.75rem;
 }
+.h-full{
+  height: 100%;
+}
 .w-full{
   width: 100%;
 }
@@ -563,9 +572,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .w-7{
   width: 1.75rem;
 }
-.w-40{
-  width: 10rem;
-}
 .w-max{
   width: -webkit-max-content;
   width: -moz-max-content;
@@ -576,6 +582,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .w-1\/3{
   width: 33.333333%;
+}
+.w-40{
+  width: 10rem;
 }
 .table-fixed{
   table-layout: fixed;
@@ -620,6 +629,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .justify-around{
   justify-content: space-around;
 }
+.justify-evenly{
+  justify-content: space-evenly;
+}
 .self-start{
   align-self: flex-start;
 }
@@ -635,6 +647,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .rounded-full{
   border-radius: 9999px;
 }
+.rounded-lg{
+  border-radius: 0.5rem;
+}
 .rounded-sm{
   border-radius: 0.125rem;
 }
@@ -648,6 +663,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .border{
   border-width: 1px;
+}
+.border-4{
+  border-width: 4px;
 }
 .border-t{
   border-top-width: 1px;
@@ -674,6 +692,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-border-opacity: 1;
   border-color: rgb(203 213 225 / var(--tw-border-opacity));
 }
+.border-black{
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
 .bg-slate-500{
   --tw-bg-opacity: 1;
   background-color: rgb(100 116 139 / var(--tw-bg-opacity));
@@ -690,6 +712,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
+.bg-slate-900{
+  --tw-bg-opacity: 1;
+  background-color: rgb(15 23 42 / var(--tw-bg-opacity));
+}
 .bg-slate-50{
   --tw-bg-opacity: 1;
   background-color: rgb(248 250 252 / var(--tw-bg-opacity));
@@ -704,6 +730,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .bg-slate-700{
   --tw-bg-opacity: 1;
   background-color: rgb(51 65 85 / var(--tw-bg-opacity));
+}
+.bg-opacity-60{
+  --tw-bg-opacity: 0.6;
 }
 .p-3{
   padding: 0.75rem;
@@ -739,6 +768,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-left: 0.75rem;
   padding-right: 0.75rem;
 }
+.px-5{
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
 .pt-5{
   padding-top: 1.25rem;
 }
@@ -747,9 +780,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 .text-left{
   text-align: left;
-}
-.text-center{
-  text-align: center;
 }
 .text-right{
   text-align: right;
